--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>ДЗ javaScript</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
-    <!-- <script src="js/test.js"></script> -->
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/test.js"></script>
     <!-- <script src="js/script_book.js"></script> -->
 </body>
 </html>
